<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TKU Meeting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="auto_login">Auto login</string>
    <string name="login">Sign in</string>
    <string name="nullString"></string>
    <string name="input_error">please enter ID or Password</string>
    <string name="submit">Submit</string>
    <string name="input_something">Are you feel boring?</string>
    <string name="target">Teacher only</string>
    <string-array
        name="option_menu">
        <item>Curriculum</item>
        <item>Comment</item>
        <item>Logout</item>
    </string-array>
    <string-array
        name="option_menu_admin">
        <item>Curriculum</item>
        <item>Comment</item>
        <item>Start vote</item>
        <item>End vote</item>
        <item>Logout</item>
    </string-array>
        <string name="a">A</string>
        <string name="b">B</string>
        <string name="c">C</string>
        <string name="d">D</string>
        <string name="pleaseLogin">Login</string>

</resources>
