<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tkumeeting.MainActivity$PlaceholderFragment" >

    <CheckBox
        android:id="@+id/auto_login_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_btn"
        android:layout_alignLeft="@+id/remember_check"
        android:text="@string/auto_login" />

    <CheckBox
        android:id="@+id/remember_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/auto_login_check"
        android:layout_alignLeft="@+id/pw_input"
        android:text="@string/remember" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pleaseLogin"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/pw_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remember_check"
        android:layout_alignLeft="@+id/id_input"
        android:layout_alignRight="@+id/login_btn"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="158dp"
        android:background="@drawable/login_button" />

    <EditText
        android:id="@+id/id_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pw_input"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/login_btn"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_input"
        android:layout_alignRight="@+id/id_input"
        android:layout_below="@+id/textView1"
        android:gravity="center_horizontal"
        android:text="@string/nullString"
        android:textColor="@color/red"
        android:textSize="25sp" />

</RelativeLayout>
