<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/right_chat_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible" >

    <ImageView
        android:id="@+id/imageView_right"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/nullString"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/demo_avatar_jobs" />

       <View
           android:id="@+id/view_right"
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/user_right"
           android:background="#DADADC"
           android:visibility="invisible" />

       <TextView
           android:id="@+id/user_right"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/chat_content_right"
           android:layout_alignParentRight="true"
           android:layout_below="@+id/imageView_right"
           android:gravity="right"
           android:text="@string/submit"
           android:textAppearance="?android:attr/textAppearanceSmall" />

       <TextView
           android:id="@+id/chat_content_right"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/imageView_right"
           android:layout_toLeftOf="@+id/imageView_right"
           android:gravity="right"
           android:text="@string/input_something"
           android:textSize="20sp" />

</RelativeLayout>
